# distributed-systems

./: .gitignore
Async-Message-Dispatcher/: Cargo.toml  lib.rs
Distributed-Atomic-Disk-Drive/integration-testing/: Cargo.toml
Distributed-Atomic-Disk-Drive/integration-testing/client/: Cargo.toml
Distributed-Atomic-Disk-Drive/integration-testing/server/src/: main.rs
Distributed-Atomic-Disk-Drive/integration-testing/shared/: Cargo.toml
Distributed-Atomic-Disk-Drive/public-tests/tests/: sectors_manager.rs
dsassignment3/main/: Cargo.toml
dsassignment3/main/src/: main.rs
dsassignment3/public-tests/: Cargo.toml
dsassignment3/solution/: Cargo.toml
dsassignment3/solution/src/: lib.rs
dslab12/: .gitignore  solution.rs
large-assignment2/: fresh-index.html
large-assignment2/client/: Cargo.toml
large-assignment2/client/src/: main.rs
large-assignment2/integration-testing/: log.txt
large-assignment2/integration-testing/client/: log.txt
large-assignment2/integration-testing/client/src/: main.rs
large-assignment2/integration-testing/server/: Cargo.toml
large-assignment2/integration-testing/shared/src/: lib.rs
large-assignment2/main-client/: Cargo.toml  log.txt
large-assignment2/main-client/src/: main.rs
large-assignment2/main-server/: Cargo.toml
large-assignment2/main-server/src/: main.rs
large-assignment2/server/: Cargo.toml
large-assignment2/server/src/: main.rs
large-assignment2/solution/src/: atomic_register_public.rs  lib.rs  register_client_public.rs  sectors_manager_public.rs  transfer_public.rs
rust-playground/fnonce/: Cargo.toml
rust-playground/fnonce/src/: main.rs
rust-playground/lab6/: Cargo.toml
rust-playground/lab6/src/: main.rs
rust-playground/lab8/: Cargo.toml
rust-playground/minigrep/src/: main.rs
rust-playground/rustlings/: .rustlings-state.txt
rust-playground/rustlings/exercises/14_generics/: generics2.rs
rust-playground/rustlings/exercises/15_traits/: traits2.rs  traits4.rs
small-assignments/dslab05/: solution.rs
small-assignments/dslab06/: Cargo.toml  main.rs  public_test.rs  solution.rs
small-assignments/dslab06/tests/: kwasow.rs  mod.rs  pedro.rs
small-assignments/dslab08/: Cargo.toml  index.html  main.rs  public_test.rs  solution.rs
small-assignments/dslab08/gen_tests/: gen_test.rs  gen_test2.rs  gen_test3.rs  gen_test4.rs  mod.rs
small-assignments/dslab09/: Cargo.toml  kwasow.rs  main.rs  public_test.rs  relay_util.rs  solution.rs
small-assignments/dslab10/: Cargo.toml  main.rs  public_test.rs  relay_util.rs  solution.rs
