[package]
name = "assignment-1-solution"
version = "0.1.1"
edition = "2024"

# Use exactly these main dependencies:
[dependencies]
async-trait = "0.1"
tokio = { version = "1.48", features = ["full"] }
log = { version = "0.4" }

[lib]
name = "assignment_1_solution"
path = "lib.rs"

[lints.rust]
unsafe_code = "forbid"
