[package]
name = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.19", features = ["v4", "serde"] }
bincode = { version = "2.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
tokio = { version = "1.48", features = ["full"] }
log = "0.4"
rand = "0.9"
module_system = { path = "../../Async-Message-Dispatcher", package = "assignment-1-solution" }
assignment-3-solution = { path = "../solution" }
assignment-3-test-utils = { path = "../test-utils" }