[package]
name = "lab8"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0", features = ["serde"] }
tokio = { version = "1.48", features = ["full"] }
bytes = "1.11"
uuid = { version = "1.18.1", features = ["v4"] }
async-trait = "0.1"
log = "0.4"