[package]
name = "lab-09"
version = "0.2.0"
edition = "2024"

[dependencies]
uuid = { version = "1.2", features = ["v4"] }
log = "0.4"
async-trait = "0.1"
tokio = { version = "1.48", features = ["full"] }
module_system = { path = "../../Async-Message-Dispatcher", package = "assignment-1-solution" }

[dev-dependencies]
ntest = "0.9"
tokio = { version = "1.48", features = ["full", "test-util"] }
env_logger = "0.11"

[[bin]]
name = "lab09"
path = "main.rs"

[lints.rust]
unsafe_code = "forbid"
