[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }

assignment-2-solution = { workspace = true }
assignment-2-test-utils = { workspace = true }

tokio = { workspace = true }
bincode = { workspace = true }
serde-big-array = { workspace = true }
